efk/elasticsearch-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: elasticsearch
  namespace: logging
  labels:
    app: elastcisearch
spec:
  replicas: 1
  template:
    metadata:
      name: elasticsearch
      labels:
        app: elasticsearch
    spec:
      serviceAccountName: logging
      nodeSelector:
          kubernetes.io/hostname: ecm155x57.ete.ka.sw.ericsson.se

      containers:
      - name: elasticsearch
        image: elasticsearch:5
        ports:
        - containerPort: 9200
        - containerPort: 9300
