efk/fluentd-daemonset.yaml
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: fluentd
  namespace: logging
spec:
  template:
    metadata:
      labels:
        app: fluentd
    spec:
      serviceAccountName: logging
      containers:
      - name: fluentd
        image: gcr.io/google_containers/fluentd-elasticsearch:1.20
        command:
          - '/bin/sh'
          - '-c'
          - '/usr/sbin/td-agent -vv 2>&1 >>/var/log/fluentd.log'
        resources:
          limits:
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 200Mi
        volumeMounts:
        - name: varlog
          mountPath: /var/log
        - name: varlibdockercontainers
          mountPath: /var/lib/docker/containers
          readOnly: true
        - name: fluentd-conf
          mountPath: /etc/td-agent
      terminationGracePeriodSeconds: 30
      volumes:
      - name: varlog
        hostPath:
          path: /var/log
      - name: varlibdockercontainers
        hostPath:
          path: /var/lib/docker/containers
      - name: fluentd-conf
        configMap:
          name: fluentd-conf
---
