efk/kibana-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kibana
  namespace: logging
  labels:
    app: kibana
spec:
  replicas: 1
  template:
    metadata:
      name: kibana
      labels:
        app: kibana
    spec:
      serviceAccountName: logging
      nodeSelector:
          kubernetes.io/hostname: ecm155x57.ete.ka.sw.ericsson.se

      containers:
      - name: kibana
        image: kibana:5
        ports:
        - containerPort: 5601
